--- a/.github/workflows/java_build_and_docker.yml
+++ b/.github/workflows/java_build_and_docker.yml
@@ -2,7 +2,7 @@ name: Java Build and Docker Push
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
